Fix mobile branding letter spacing and add sock files to ignore.

--- a/gardenharmony/static/scss/app.scss
+++ b/gardenharmony/static/scss/app.scss
@@ -28,7 +28,7 @@ a:hover {
 nav[role='navigation'] {
     background-color: white;
     .logo {
-        letter-spacing: 0.25rem;
+        letter-spacing: 0.20rem;
         font-family: $title-font;
         text-transform: uppercase;
         font-size: $h3-font-size;
